--- a/mobile/mummiescandies/index.html
+++ b/mobile/mummiescandies/index.html
@@ -79,6 +79,43 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+		
+		localStorage.removeItem("Mummy CandiesTotalScore");
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "mummycandies",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
+			const key = "Mummy CandiesTotalScore";
+			var local = data; //localStorage.getItem(key);
+			function onUpdate() {
+				let score = localStorage.removeItem(key);
+				if (parseInt(score) > parseInt(lscore)) {
+				lscore = score;
+					const urlParams = new URLSearchParams(window.location.search);
+					fetch("https://switchgames.onrender.com/updateScore", {
+						method: "POST", body: JSON.stringify(
+							{
+								userId: urlParams.get("userId"),
+								"score": local,
+								game_name: "mummycandies",
+								messageId: urlParams.get("messageId"),
+							})
+					}).then(console.debug);
+				};
+				setTimeout(onUpdate, 200);
+			};
+			setTimeout(onUpdate, 200);
+		
+	
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
