--- a/subway-surfers-winter-holiday/index.html
+++ b/subway-surfers-winter-holiday/index.html
@@ -81,8 +81,8 @@
         <h1>Loading</h1>
         <h1 class="dot one">.</h1><h1 class="dot two">.</h1><h1 class="dot three">.</h1>
     </div>
-    <script src="js/loading.js"></script>
-    <script src="js/boot.js"></script>
+    <script src="https://ubg77.github.io/updatefaqs/subway-surfers-winter-holiday/js/loading.js"></script>
+    <script src="https://ubg77.github.io/updatefaqs/subway-surfers-winter-holiday/js/boot.js"></script>
 
 </body>
 </html>
