--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -104,7 +104,7 @@
 
 	    function onUpdate() {
 		let local = localStorage.getItem(key);
-		if (parseInt(score) > parseInt(lscore)) {
+		if (parseInt(local) > parseInt(lscore)) {
 				lscore = score;
 	            const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
