--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -105,7 +105,7 @@
 	    function onUpdate() {
 		let local = localStorage.getItem(key);
 		if (parseInt(local) > parseInt(lscore)) {
-				lscore = score;
+				lscore = local;
 	            const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
